added social media post scripts

--- a/socialposts/NHLhockey_predictions.html
+++ b/socialposts/NHLhockey_predictions.html
@@ -1,11 +1,11 @@
 
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-        html{background-color: #232931}
+        html,body {background-color: #232931; height: 800px; margin:0;}
         *{font-family: "Ubuntu", sans-serif;}
         .predictions{
         width: 800px;
-        height: 900px;
+        height: 750px;
 
         display:flex;
         flex-direction:column;
@@ -24,7 +24,6 @@
             margin: 0;
             line-height: 1;
             white-space:nowrap;
-            font-weight: 400;
 
             
             font-size: min(
@@ -35,18 +34,14 @@
         </style>
 
         <h1 style="text-align:center; font-size: 5vh; margin-top: 15px; margin-bottom: 5px; color:#c5a7e7">NHL Predictions</h1>
-        <h3 style="text-align:center; font-size: 3vh; color:white; margin: 5px;">2026-01-19</h3>
-        <h4 style="text-align:center; font-size: 2vh; margin: 15px; font-weight: 400; color: white;">Accuracy: 50.5%</h4>
+        <h3 style="text-align:center; font-size: 3vh; color:white; margin: 5px;">2026-01-21</h3>
+        <h4 style="text-align:center; font-size: 2vh; margin: 15px; font-weight: 400; color: white;">Accuracy: 51.5%</h4>
         <div class="predictions">
 
-        <h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#e7b0a7'>Hurricanes</span> @ <span id='awayteam' style='color:#e7a7da'>Sabres</span> | <span style='color:#e7a7da'>55.0% Sabres</span></h3>
-<h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#e7b0a7'>Avalanche</span> @ <span id='awayteam' style='color:#e7a7da'>Capitals</span> | <span style='color:#e7b0a7'>78.7% Avalanche</span></h3>
-<h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#e7b0a7'>Kraken</span> @ <span id='awayteam' style='color:#e7a7da'>Penguins</span> | <span style='color:#e7b0a7'>50.4% Kraken</span></h3>
-<h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#e7b0a7'>Panthers</span> @ <span id='awayteam' style='color:#e7a7da'>Sharks</span> | <span style='color:#e7b0a7'>54.8% Panthers</span></h3>
-<h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#e7b0a7'>Maple Leafs</span> @ <span id='awayteam' style='color:#e7a7da'>Wild</span> | <span style='color:#e7a7da'>62.3% Wild</span></h3>
-<h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#e7b0a7'>Golden Knights</span> @ <span id='awayteam' style='color:#e7a7da'>Flyers</span> | <span style='color:#e7a7da'>61.1% Flyers</span></h3>
-<h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#e7b0a7'>Blackhawks</span> @ <span id='awayteam' style='color:#e7a7da'>Jets</span> | <span style='color:#e7b0a7'>54.4% Blackhawks</span></h3>
-<h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#e7b0a7'>Flames</span> @ <span id='awayteam' style='color:#e7a7da'>Devils</span> | <span style='color:#e7b0a7'>56.5% Flames</span></h3>
-<h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#e7b0a7'>Canucks</span> @ <span id='awayteam' style='color:#e7a7da'>Islanders</span> | <span style='color:#e7a7da'>65.4% Islanders</span></h3>
-<h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#e7b0a7'>Ducks</span> @ <span id='awayteam' style='color:#e7a7da'>Rangers</span> | <span style='color:#e7a7da'>59.0% Rangers</span></h3>
-</div><h4 style='text-align:center; width: 100%; left: 50%; transform: translateX(-50%); position:fixed; bottom:0; font-weight: 400; font-size: 3vh; color:white; margin: 5px;'>QuantusSports.pages.dev/hockey</h4>
+        <h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#a7c7e7'>Maple Leafs</span> @ <span id='awayteam' style='color:#e7a7e5'>Red Wings</span> | <span style='color:#e7a7e5'>58.5% Red Wings</span></h3>
+<h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#a7c7e7'>Avalanche</span> @ <span id='awayteam' style='color:#e7a7e5'>Ducks</span> | <span style='color:#a7c7e7'>79.8% Avalanche</span></h3>
+<h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#a7c7e7'>Mammoth</span> @ <span id='awayteam' style='color:#e7a7e5'>Flyers</span> | <span style='color:#a7c7e7'>66.2% Mammoth</span></h3>
+<h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#a7c7e7'>Flames</span> @ <span id='awayteam' style='color:#e7a7e5'>Penguins</span> | <span style='color:#e7a7e5'>56.3% Penguins</span></h3>
+<h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#a7c7e7'>Kraken</span> @ <span id='awayteam' style='color:#e7a7e5'>Islanders</span> | <span style='color:#e7a7e5'>59.9% Islanders</span></h3>
+<h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#a7c7e7'>Canucks</span> @ <span id='awayteam' style='color:#e7a7e5'>Capitals</span> | <span style='color:#e7a7e5'>70.3% Capitals</span></h3>
+</div><h4 style='text-align:center; width: 100%; margin-top: 56%; left: 50%; transform: translateX(-50%); position:fixed; bottom:0; font-weight: 400; font-size: 3vh; color:white; margin: 5px;'>QuantusSports.pages.dev/hockey</h4>
