--- a/socialposts/MLBbaseball_predictions.html
+++ b/socialposts/MLBbaseball_predictions.html
@@ -1,11 +1,11 @@
 
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-        html{background-color: #232931}
+        html,body {background-color: #232931; height: 800px; margin:0;}
         *{font-family: "Ubuntu", sans-serif;}
         .predictions{
         width: 800px;
-        height: 900px;
+        height: 750px;
 
         display:flex;
         flex-direction:column;
@@ -24,7 +24,6 @@
             margin: 0;
             line-height: 1;
             white-space:nowrap;
-            font-weight: 400;
 
             
             font-size: min(
@@ -35,7 +34,7 @@
         </style>
 
         <h1 style="text-align:center; font-size: 5vh; margin-top: 15px; margin-bottom: 5px; color:#a7e7b1">MLB Predictions</h1>
-        <h3 style="text-align:center; font-size: 3vh; color:white; margin: 5px;">2026-01-19</h3>
+        <h3 style="text-align:center; font-size: 3vh; color:white; margin: 5px;">2026-01-21</h3>
         <h4 style="text-align:center; font-size: 2vh; margin: 15px; font-weight: 400; color: white;">Accuracy: 50.5%</h4>
         <div class="predictions">
 
@@ -54,4 +53,4 @@
 <h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#91ffa3'>Astros</span> @ <span id='awayteam' style='color:#63b3ed'>Padres</span> | <span style='color:#63b3ed'>55.6% Padres</span></h3>
 <h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#91ffa3'>Braves</span> @ <span id='awayteam' style='color:#63b3ed'>Twins</span> | <span style='color:#91ffa3'>63.1% Braves</span></h3>
 <h3 class='game-row' style='color: white;'><span id='hometeam' style='color:#91ffa3'>Angels</span> @ <span id='awayteam' style='color:#63b3ed'>Giants</span> | <span style='color:#63b3ed'>65.4% Giants</span></h3>
-</div><h4 style='text-align:center; width: 100%; left: 50%; transform: translateX(-50%); position:fixed; bottom:0; font-weight: 400; font-size: 3vh; color:white; margin: 5px;'>QuantusSports.pages.dev/baseball</h4>
+</div><h4 style='text-align:center; width: 100%; margin-top: 56%; left: 50%; transform: translateX(-50%); position:fixed; bottom:0; font-weight: 400; font-size: 3vh; color:white; margin: 5px;'>QuantusSports.pages.dev/baseball</h4>
